oxd_preda/simulator/antlr_generated/PredaScriptParser.cpp

// Generated from PredaScript.g4 by ANTLR 4.12.0


#include "PredaScriptListener.h"

#include "PredaScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PredaScriptParserStaticData final {
  PredaScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PredaScriptParserStaticData(const PredaScriptParserStaticData&) = delete;
  PredaScriptParserStaticData(PredaScriptParserStaticData&&) = delete;
  PredaScriptParserStaticData& operator=(const PredaScriptParserStaticData&) = delete;
  PredaScriptParserStaticData& operator=(PredaScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag predascriptParserOnceFlag;
PredaScriptParserStaticData *predascriptParserStaticData = nullptr;

void predascriptParserInitialize() {
  assert(predascriptParserStaticData == nullptr);
  auto staticData = std::make_unique<PredaScriptParserStaticData>(
    std::vector<std::string>{
      "scripts", "script", "chainOperation", "awaitChain", "stepChain", 
      "runChain", "stopChain", "getChainInfo", "deployContractOnChain", 
      "contractProperties", "contractProperty", "predaFile", "xtlFile", 
      "batchInsertTxnOnChain", "setGasLimit", "variableDeclaration", "variableAssign", 
      "varName", "varValue", "dataReadFromFile", "csvfilePath", "config", 
      "configState", "setContractState", "stateScope", "updateState", "tokenState", 
      "mintToken", "tokenSymbol", "loadState", "jsonFilePath", "saveState", 
      "configAddress", "configRandomizer", "issueTxn", "txnReturnInfo", 
      "contractId", "contractName", "cvid", "functionName", "count", "scope", 
      "shardScope", "addressScope", "jsonParameters", "jsonParameter", "jsonKey", 
      "jsonValue", "primaryValue", "arrayValue", "concreteValue", "toBeAssignedValue", 
      "bigintRandom", "intExpression", "intRandom", "randomRange", "suppliedTokens", 
      "token", "debugInfo", "logInfo", "normalLog", "logHighlight", "logWarning", 
      "logError", "timeInfo", "stopWatchRestart", "stopWatchReport", "viz", 
      "vizBlock", "vizAddr", "vizShard", "vizTxn", "vizTrace", "vizSection", 
      "vizProfiling", "vizUintScope", "uintScope", "scopeTarget", "numberLiteral", 
      "hexLiteral", "stringLiteral", "boolLiteral", "ed25519Address", "identifier", 
      "fileName", "directivePath"
    },
    std::vector<std::string>{
      "", "'chain.await'", "'chain.step'", "'chain.run'", "'chain.stop'", 
      "'chain.info'", "'chain.deploy'", "'='", "'.prd'", "':'", "'.xtl'", 
      "'chain.batch_insert_txn'", "'chain.gaslimit'", "'.'", "'csv.from'", 
      "'('", "')'", "'.csv'", "'state.set'", "'state.update'", "'state'", 
      "'token'", "'by'", "'-'", "'state.load'", "'<'", "'>'", "'.json'", 
      "'state.save'", "'allocate.address'", "'reseed'", "'<='", "'['", "']'", 
      "'*'", "'#g'", "'#'", "'@'", "'{'", "','", "'}'", "'$'", "'/'", "'+'", 
      "'log'", "'log.highlight'", "'log.warning'", "'log.error'", "'stopwatch.restart'", 
      "'stopwatch.report'", "'viz.block'", "'viz.addr'", "'viz.shard'", 
      "'viz.txn'", "'viz.trace'", "'viz.section'", "'viz.profiling'", "'viz.uint_scope'", 
      "", "", "'random'", "'bigint'", "'all'", "'global'", "'shard'", "'address'", 
      "'true'", "'false'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "WASM", "NATIVE", "RANDOM", "BIGINT", 
      "ALL", "GLOBAL", "SHARD", "ADDRESS", "TrueKeyword", "FalseKeyword", 
      "DecimalNumber", "HexNumber", "StringLiteral", "Ed25519Address", "Identifier", 
      "WINPATH", "WIN_ABSOLUTE_PATH", "WIN_REALATIVE_PATH", "UNIXPATH", 
      "UNIX_ABSOLUTE_PATH", "UNIX_REALATIVE_PATH", "NotDefinedValue", "NewLineBackSlash", 
      "WS", "CommentSingleLine", "CommentMultiLine"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  predascriptParserStaticData = staticData.release();
}

}

PredaScriptParser::PredaScriptParser(TokenStream *input) : PredaScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PredaScriptParser::PredaScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PredaScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *predascriptParserStaticData->atn, predascriptParserStaticData->decisionToDFA, predascriptParserStaticData->sharedContextCache, options);
}

PredaScriptParser::~PredaScriptParser() {
  delete _interpreter;
}

const atn::ATN& PredaScriptParser::getATN() const {
  return *predascriptParserStaticData->atn;
}

std::string PredaScriptParser::getGrammarFileName() const {
  return "PredaScript.g4";
}

const std::vector<std::string>& PredaScriptParser::getRuleNames() const {
  return predascriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& PredaScriptParser::getVocabulary() const {
  return predascriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PredaScriptParser::getSerializedATN() const {
  return predascriptParserStaticData->serializedATN;
}


//----------------- ScriptsContext ------------------------------------------------------------------

PredaScriptParser::ScriptsContext::ScriptsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PredaScriptParser::ScriptsContext::EOF() {
  return getToken(PredaScriptParser::EOF, 0);
}

std::vector<PredaScriptParser::ScriptContext *> PredaScriptParser::ScriptsContext::script() {
  return getRuleContexts<PredaScriptParser::ScriptContext>();
}

PredaScriptParser::ScriptContext* PredaScriptParser::ScriptsContext::script(size_t i) {
  return getRuleContext<PredaScriptParser::ScriptContext>(i);
}


size_t PredaScriptParser::ScriptsContext::getRuleIndex() const {
  return PredaScriptParser::RuleScripts;
}

void PredaScriptParser::ScriptsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScripts(this);
}

void PredaScriptParser::ScriptsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScripts(this);
}

PredaScriptParser::ScriptsContext* PredaScriptParser::scripts() {
  ScriptsContext *_localctx = _tracker.createInstance<ScriptsContext>(_ctx, getState());
  enterRule(_localctx, 0, PredaScriptParser::RuleScripts);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(175);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1441134289404827774) != 0) || _la == PredaScriptParser::DecimalNumber

    || _la == PredaScriptParser::Identifier) {
      setState(172);
      script();
      setState(177);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(178);
    match(PredaScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScriptContext ------------------------------------------------------------------

PredaScriptParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaScriptParser::ChainOperationContext* PredaScriptParser::ScriptContext::chainOperation() {
  return getRuleContext<PredaScriptParser::ChainOperationContext>(0);
}

PredaScriptParser::VariableDeclarationContext* PredaScriptParser::ScriptContext::variableDeclaration() {
  return getRuleContext<PredaScriptParser::VariableDeclarationContext>(0);
}

PredaScriptParser::ConfigContext* PredaScriptParser::ScriptContext::config() {
  return getRuleContext<PredaScriptParser::ConfigContext>(0);
}

PredaScriptParser::IssueTxnContext* PredaScriptParser::ScriptContext::issueTxn() {
  return getRuleContext<PredaScriptParser::IssueTxnContext>(0);
}

PredaScriptParser::DebugInfoContext* PredaScriptParser::ScriptContext::debugInfo() {
  return getRuleContext<PredaScriptParser::DebugInfoContext>(0);
}

PredaScriptParser::VizContext* PredaScriptParser::ScriptContext::viz() {
  return getRuleContext<PredaScriptParser::VizContext>(0);
}


size_t PredaScriptParser::ScriptContext::getRuleIndex() const {
  return PredaScriptParser::RuleScript;
}

void PredaScriptParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void PredaScriptParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}

PredaScriptParser::ScriptContext* PredaScriptParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 2, PredaScriptParser::RuleScript);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(186);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(180);
      chainOperation();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(181);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(182);
      config();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(183);
      issueTxn();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(184);
      debugInfo();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(185);
      viz();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainOperationContext ------------------------------------------------------------------

PredaScriptParser::ChainOperationContext::ChainOperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaScriptParser::AwaitChainContext* PredaScriptParser::ChainOperationContext::awaitChain() {
  return getRuleContext<PredaScriptParser::AwaitChainContext>(0);
}

PredaScriptParser::StepChainContext* PredaScriptParser::ChainOperationContext::stepChain() {
  return getRuleContext<PredaScriptParser::StepChainContext>(0);
}

PredaScriptParser::RunChainContext* PredaScriptParser::ChainOperationContext::runChain() {
  return getRuleContext<PredaScriptParser::RunChainContext>(0);
}

PredaScriptParser::StopChainContext* PredaScriptParser::ChainOperationContext::stopChain() {
  return getRuleContext<PredaScriptParser::StopChainContext>(0);
}

PredaScriptParser::GetChainInfoContext* PredaScriptParser::ChainOperationContext::getChainInfo() {
  return getRuleContext<PredaScriptParser::GetChainInfoContext>(0);
}

PredaScriptParser::DeployContractOnChainContext* PredaScriptParser::ChainOperationContext::deployContractOnChain() {
  return getRuleContext<PredaScriptParser::DeployContractOnChainContext>(0);
}

PredaScriptParser::BatchInsertTxnOnChainContext* PredaScriptParser::ChainOperationContext::batchInsertTxnOnChain() {
  return getRuleContext<PredaScriptParser::BatchInsertTxnOnChainContext>(0);
}

PredaScriptParser::SetGasLimitContext* PredaScriptParser::ChainOperationContext::setGasLimit() {
  return getRuleContext<PredaScriptParser::SetGasLimitContext>(0);
}


size_t PredaScriptParser::ChainOperationContext::getRuleIndex() const {
  return PredaScriptParser::RuleChainOperation;
}

void PredaScriptParser::ChainOperationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChainOperation(this);
}

void PredaScriptParser::ChainOperationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChainOperation(this);
}

PredaScriptParser::ChainOperationContext* PredaScriptParser::chainOperation() {
  ChainOperationContext *_localctx = _tracker.createInstance<ChainOperationContext>(_ctx, getState());
  enterRule(_localctx, 4, PredaScriptParser::RuleChainOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(196);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PredaScriptParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(188);
        awaitChain();
        break;
      }

      case PredaScriptParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(189);
        stepChain();
        break;
      }

      case PredaScriptParser::T__2: {
        enterOuterAlt(_localctx, 3);
        setState(190);
        runChain();
        break;
      }

      case PredaScriptParser::T__3: {
        enterOuterAlt(_localctx, 4);
        setState(191);
        stopChain();
        break;
      }

      case PredaScriptParser::T__4: {
        enterOuterAlt(_localctx, 5);
        setState(192);
        getChainInfo();
        break;
      }

      case PredaScriptParser::T__5: {
        enterOuterAlt(_localctx, 6);
        setState(193);
        deployContractOnChain();
        break;
      }

      case PredaScriptParser::T__10: {
        enterOuterAlt(_localctx, 7);
        setState(194);
        batchInsertTxnOnChain();
        break;
      }

      case PredaScriptParser::T__11: {
        enterOuterAlt(_localctx, 8);
        setState(195);
        setGasLimit();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AwaitChainContext ------------------------------------------------------------------

PredaScriptParser::AwaitChainContext::AwaitChainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PredaScriptParser::AwaitChainContext::getRuleIndex() const {
  return PredaScriptParser::RuleAwaitChain;
}

void PredaScriptParser::AwaitChainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAwaitChain(this);
}

void PredaScriptParser::AwaitChainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAwaitChain(this);
}

PredaScriptParser::AwaitChainContext* PredaScriptParser::awaitChain() {
  AwaitChainContext *_localctx = _tracker.createInstance<AwaitChainContext>(_ctx, getState());
  enterRule(_localctx, 6, PredaScriptParser::RuleAwaitChain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(198);
    match(PredaScriptParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StepChainContext ------------------------------------------------------------------

PredaScriptParser::StepChainContext::StepChainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PredaScriptParser::StepChainContext::getRuleIndex() const {
  return PredaScriptParser::RuleStepChain;
}

void PredaScriptParser::StepChainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStepChain(this);
}

void PredaScriptParser::StepChainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStepChain(this);
}

PredaScriptParser::StepChainContext* PredaScriptParser::stepChain() {
  StepChainContext *_localctx = _tracker.createInstance<StepChainContext>(_ctx, getState());
  enterRule(_localctx, 8, PredaScriptParser::RuleStepChain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(200);
    match(PredaScriptParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RunChainContext ------------------------------------------------------------------

PredaScriptParser::RunChainContext::RunChainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PredaScriptParser::RunChainContext::getRuleIndex() const {
  return PredaScriptParser::RuleRunChain;
}

void PredaScriptParser::RunChainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRunChain(this);
}

void PredaScriptParser::RunChainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRunChain(this);
}

PredaScriptParser::RunChainContext* PredaScriptParser::runChain() {
  RunChainContext *_localctx = _tracker.createInstance<RunChainContext>(_ctx, getState());
  enterRule(_localctx, 10, PredaScriptParser::RuleRunChain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(202);
    match(PredaScriptParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StopChainContext ------------------------------------------------------------------

PredaScriptParser::StopChainContext::StopChainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PredaScriptParser::StopChainContext::getRuleIndex() const {
  return PredaScriptParser::RuleStopChain;
}

void PredaScriptParser::StopChainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStopChain(this);
}

void PredaScriptParser::StopChainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStopChain(this);
}

PredaScriptParser::StopChainContext* PredaScriptParser::stopChain() {
  StopChainContext *_localctx = _tracker.createInstance<StopChainContext>(_ctx, getState());
  enterRule(_localctx, 12, PredaScriptParser::RuleStopChain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(204);
    match(PredaScriptParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GetChainInfoContext ------------------------------------------------------------------

PredaScriptParser::GetChainInfoContext::GetChainInfoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PredaScriptParser::GetChainInfoContext::getRuleIndex() const {
  return PredaScriptParser::RuleGetChainInfo;
}

void PredaScriptParser::GetChainInfoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGetChainInfo(this);
}

void PredaScriptParser::GetChainInfoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGetChainInfo(this);
}

PredaScriptParser::GetChainInfoContext* PredaScriptParser::getChainInfo() {
  GetChainInfoContext *_localctx = _tracker.createInstance<GetChainInfoContext>(_ctx, getState());
  enterRule(_localctx, 14, PredaScriptParser::RuleGetChainInfo);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(206);
    match(PredaScriptParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeployContractOnChainContext ------------------------------------------------------------------

PredaScriptParser::DeployContractOnChainContext::DeployContractOnChainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PredaScriptParser::ContractPropertiesContext* PredaScriptParser::DeployContractOnChainContext::contractProperties() {
  return getRuleContext<PredaScriptParser::ContractPropertiesContext>(0);
}

PredaScriptParser::AddressScopeContext* PredaScriptParser::DeployContractOnChainContext::addressScope() {
  return getRuleContext<PredaScriptParser::AddressScopeContext>(0);
}

PredaScriptParser::ShardScopeContext* PredaScriptParser::DeployContractOnChainContext::shardScope() {
  return getRuleContext<PredaScriptParser::ShardScopeContext>(0);
}


size_t PredaScriptParser::DeployContractOnChainContext::getRuleIndex() const {
  return PredaScriptParser::RuleDeployContractOnChain;
}

void PredaScriptParser::DeployContractOnChainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeployContractOnChain(this);
}

void PredaScriptParser::DeployContractOnChainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PredaScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeployContractOnChain(this);
}

PredaScriptParser::DeployContractOnChainContext* PredaScriptParser::deployContractOnChain() {
  DeployContractOnChainContext *_localctx = _tracker.createInstance<DeployContractOnChainContext>(_ctx, getState());
  enterRule(_localctx, 16, PredaScriptParser::RuleDeployContractOnChain);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(208);
    match(PredaScriptParser::T__5);
    setState(211);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PredaScriptParser::T__36: {
        setState(209);
        addressScope();
        break;
      }

      case PredaScriptParser::T__34:
      case PredaScriptParser::T__35: {
        setState(210);
        shardScope();
        break;
      }
